fix: popover checkboxes no longer have list number behind them in <ol>

--- a/quartz/components/styles/popover.scss
+++ b/quartz/components/styles/popover.scss
@@ -80,6 +80,13 @@
         content: counter(list-popover) ".";
       }
 
+      // Hide list markers for checkbox items
+      & li:has(> input.checkbox-toggle)::marker,
+      & li:has(> p > input.checkbox-toggle)::marker,
+      & li:has(> label > input.checkbox-toggle)::marker {
+        content: none;
+      }
+
       & li[id^="user-content-fn-"] {
         counter-increment: footnote-popover;
 
